# dataflow

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  =  AffineToNeuraPass_ANNOTATED.cpp  AffineToNeuraPass_中文注释.cpp  AffineToNeura_Pass重写说明.md  CMakeLists.txt  CMakeLists.txt.backup  CONTRIBUTING.md  Dockerfile  FILECHECK_FIX_GUIDE.md  MAPPING_OPTIMIZATION_SUMMARY.md  NEXT_AGENT_CONTEXT.md  README.md  README2.md  REVIEW_RESPONSES_AND_CHANGELOG.md  REVIEW_RESPONSES_AND_CHANGELOG_ZH.md  batch_fix_all.py  batch_fix_tests.sh  batch_update_tests.sh  bicg-kernel-full.ll  bicg-kernel-only.ll  bicg-kernel.mlir  bicg-mapping.mlir  branch_for_checks.txt  branch_for_extracted.mlir  branch_for_full.tmp  branch_for_test.mlir  build_docker.sh  canonicalize.mlir  check.mlir  code_gen_body.mlir  code_gen_checks.txt  code_gen_err.txt  code_gen_extracted.mlir  code_gen_full.tmp  code_gen_lit_v.txt  code_gen_out.mlir  (+74 more)
.agent/: next_steps.md
Generated_Code/: README.md  generated-instructions.asm  generated-instructions.json
backup_scripts/: FILECHECK_FIX_GUIDE.md  regenerate_tests.py
docker/: Dockerfile
evaluation/: main.py
include/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/AffineToNeura/: AffineToNeuraPass.cpp  CMakeLists.txt  LoopNestAnalysis.cpp
lib/Conversion/AffineToTaskflow/: AffineToTaskflowPass.cpp  CMakeLists.txt  ConvertCopyToAffineLoopsPass.cpp  FoldSubViewPass.cpp
lib/Conversion/ArithToNeura/: ArithToNeura.cpp  ArithToNeuraPass.cpp  ArithToNeuraPatterns.td  CMakeLists.txt
lib/Conversion/AssignTaskTarget/: AssignTaskTargetPass.cpp  CMakeLists.txt
lib/Conversion/BuiltinToNeura/: BuiltinToNeuraPass.cpp  CMakeLists.txt
lib/Conversion/LinalgToTaskFlow/: CMakeLists.txt  LinalgToTaskFlowPass.cpp
lib/Conversion/LinalgToTaskflow/: CMakeLists.txt  LinalgToTaskflowPass.cpp
lib/Conversion/LlvmToNeura/: CMakeLists.txt  LlvmToNeuraPass.cpp  LlvmToNeuraPatterns.td
lib/Conversion/MemRefToNeura/: CMakeLists.txt  MemRefToNeuraPass.cpp
lib/Conversion/TaskflowToNeura/: CMakeLists.txt  TaskflowToNeuraPass.cpp
lib/Conversion/TosaToTaskflow/: CMakeLists.txt  TosaToTaskflowPipeline.cpp
lib/NeuraDialect/: CMakeLists.txt  Neura.cpp  NeuraDialect.cpp  NeuraOps.cpp  NeuraPasses.cpp  NeuraTypes.cpp
lib/NeuraDialect/Architecture/: Architecture.cpp
lib/NeuraDialect/Conversion/: CMakeLists.txt
lib/NeuraDialect/Conversion/AffineToNeura/: CMakeLists.txt
lib/NeuraDialect/Conversion/ArithToNeura/: ArithToNeuraPass.cpp  ArithToNeuraPatterns.td  CMakeLists.txt
lib/NeuraDialect/Conversion/LlvmToNeura/: CMakeLists.txt  LlvmToNeuraPatterns.td
lib/NeuraDialect/GraphMining/: GraMi.cpp
lib/NeuraDialect/Mapping/: Mapping.cpp  MappingState.cpp  MappingStrategy.cpp  mapping_util.cpp
lib/NeuraDialect/Mapping/BacktrackMapping/: BacktrackMapping.cpp
lib/NeuraDialect/Mapping/GreedyMapping/: GreedyMapping.cpp
lib/NeuraDialect/Mapping/HeuristicMapping/: HeuristicMapping.cpp
lib/NeuraDialect/Mapping/SpatialMapping/: SpatialMapping.cpp
lib/NeuraDialect/Mapping/SpatialTemporalMapping/: SpatialTemporalMapping.cpp
lib/NeuraDialect/Transforms/: AssignAcceleratorPass.cpp  CMakeLists.txt  CanonicalizeCastPass.cpp  CanonicalizeLiveInPass.cpp  CanonicalizeReturnPass.cpp  FoldConstantPass.cpp  FoldConstantsPass.cpp  FuseControlFlowPass.cpp  FuseKernelPass.cpp  FusePatternPass.cpp  FusePatternsPass.cpp  GenerateCodePass.cpp  HardwareMergePass.cpp  InitCommonPatternPass.cpp  InitExecLatencyPass.cpp  InsertCtrlMovPass.cpp  InsertDataMovPass.cpp  InsertMovPass.cpp  IterMergePatternPass.cpp  LeveragePredicatedValuePass.cpp  MapOperationOnTilePass.cpp  MapToAcceleratorPass.cpp  NeuraCanonicalizePass.cpp  PromoteFuncArgToConstPass.cpp  PromoteInputArgToConstPass.cpp  RemovePredicatedTypePass.cpp  TransformCtrlToDataFlowPass.cpp  TransformToSteerControlPass.cpp  WrapLoopInKernelPass.cpp
lib/NeuraDialect/Transforms/GraphMining/: GraMi.cpp  HardwareTemplate.cpp
lib/NeuraDialect/Transforms/Optimizations/: CMakeLists.txt
lib/NeuraDialect/Transforms/Optimizations/HWAgnosticOpt/: CMakeLists.txt  FoldConstantPass.cpp
lib/NeuraDialect/Transforms/Optimizations/HWSpecificOpt/: CMakeLists.txt
lib/NeuraDialect/Transforms/Optimizations/HwAgnosticOpt/: CMakeLists.txt  FoldConstantPass.cpp
lib/NeuraDialect/Transforms/Optimizations/HwSpecificOpt/: CMakeLists.txt  FuseLoopControlPass.cpp
lib/NeuraDialect/Transforms/mapping/: mapping_util.cpp
lib/NeuraDialect/Util/: ArchParser.cpp  ParserUtils.cpp
lib/TaskflowDialect/: CMakeLists.txt  Taskflow.cpp  TaskflowOps.cpp  TaskflowPasses.cpp
lib/TaskflowDialect/Allocation/: CMakeLists.txt  RoutingCriticalPathAllocation.cpp  allocation_utils.cpp  allocation_utils_mapper.cpp
lib/TaskflowDialect/Analysis/: CMakeLists.txt  HyperblockDependencyAnalysis.cpp
lib/TaskflowDialect/Transforms/: AllocateCgraToTaskPass.cpp  AnalyzeMCTDependencyPass.cpp  CMakeLists.txt  CanonicalizeTaskPass.cpp  ClassifyCountersPass.cpp  ConstructHyperblockFromTaskPass.cpp  FuseHyperblockToPipelinableTaskPass.cpp  FuseTaskPass.cpp  FuseTaskPass.cpp.bak2  MapCTOnCGRAArrayPass.cpp  MapTaskOnCgraPass.cpp  OptimizeTaskGraphPass.cpp  PartitionTaskByTarget.cpp  PlaceACTOnCGRAPass.cpp  PlaceMCTOnCGRAPass.cpp  TaskDivisibilityAnalysisPass.cpp
lib/TaskflowDialect/Transforms/Optimizations/: AffineLoopPerfectionPass.cpp  AffineLoopTreeSerializationPass.cpp  CMakeLists.txt  MemoryAccessStreamingFusion.cpp  ResourceAwareTaskOptimizationPass.cpp  ResourceAwareTaskOptimizationPass.cpp.bak  TaskCategorizationPass.cpp
lib/TaskflowDialect/Util/: AllocateCgraTaskMapper.cpp  CMakeLists.txt  CgraPlacementUtils.cpp
lib/Transforms/: AssignAcceleratorPass.cpp  CMakeLists.txt  FusePatternsPass.cpp  InsertMovPass.cpp
lib/Transforms/ArithToNeura/: ArithToNeuraPass.cpp
lib/Transforms/LlvmToNeura/: LlvmToNeuraPass.cpp
tools/mlir-neura-opt/: CMakeLists.txt  mlir-neura-opt.cpp
tools/mlir-taskflow-opt/: CMakeLists.txt  mlir-taskflow-opt.cpp
tools/neura-compiler/: CMakeLists.txt  neura-compiler.cpp
tools/neura-interpreter/: CMakeLists.txt  neura-interpreter.cpp
(+667 files in other folders)
